<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:fadingEdge="horizontal|vertical"
    android:orientation="horizontal"
    tools:context="${packageName}.${activityClass}" >
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_background"
            android:orientation="horizontal"
            android:textAlignment="center" >

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="0dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:shadowColor="@color/title_background"
                android:shadowDx="5"
                android:shadowDy="5"
                android:text="@string/distance" >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_field"
            android:orientation="horizontal" >

            <EditText
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_margin="0dp"
                android:ems="6"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/initial_value"
                android:textColor="@color/black_text" >

            </EditText>

            <EditText
                android:id="@+id/editInitialDistance"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/input_field"
                android:inputType="numberDecimal" >

            </EditText>
        </LinearLayout>
            
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <EditText
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="0dp"
                android:ems="6"
                android:focusable="false"
                android:text="@string/from"
                android:background="@color/left_column"
                android:textColor="@color/black_text" >
            </EditText>
            <EditText
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="0dp"
                android:ems="6"
                android:focusable="false"
                android:text="@string/to"
                android:background="@color/right_column"
                android:textColor="@color/black_text" >
            </EditText>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/radioGroupDistanceFrom"
                android:layout_weight="1"
                android:layout_width="wrap_content"               
                android:layout_height="wrap_content"
                android:background="@color/left_column"
                android:baselineAligned="false"
                android:clipToPadding="false"
                android:fadingEdge="horizontal|vertical"
                android:padding="@dimen/RadioPadding" >

                <RadioButton
                    android:id="@+id/radioFromMiles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miles"
                    android:checked="true"
                    android:textColorHint="@color/black_text" />

                <RadioButton
                    android:id="@+id/radioFromFeet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feet" />

                <RadioButton
                    android:id="@+id/radioFromInches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inches" />
                <RadioButton
                    android:id="@+id/radioFromKilometers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kilometers" />
                <RadioButton
                    android:id="@+id/radioFromMeters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meters" />
                <RadioButton
                    android:id="@+id/radioFromMillimeters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/millimiters" />
                </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupTemperatureTo"
                android:layout_weight="1"
                android:layout_width="wrap_content"                
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="@color/right_column"
                android:padding="@dimen/RadioPadding"
                android:showDividers="middle" >

                <RadioButton
                    android:id="@+id/radioToMiles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miles"
                    android:textColorHint="@color/black_text" />

                <RadioButton
                    android:id="@+id/radioToFeet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feet" />

                <RadioButton
                    android:id="@+id/radioToInches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inches" />
                <RadioButton
                    android:id="@+id/radioToKilometers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/kilometers" />
                <RadioButton
                    android:id="@+id/radioToMeters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meters" />
                <RadioButton
                    android:id="@+id/radioToMillimeters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/millimiters" />
             </RadioGroup>

        </LinearLayout>
        <Button
       		android:id="@+id/button2"
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content"
       		android:onClick="calculateDistance"
       		android:text="@string/calculate" />
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_field"
            android:orientation="horizontal" >

            <EditText
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_margin="0dp"
                android:ems="6"
                android:focusable="false"
                android:text="@string/resault"
                android:textColor="@color/black_text" >
            </EditText>

            <EditText
                android:id="@+id/textResultDistance"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/input_field"
                android:inputType="numberDecimal" >

            </EditText>
        </LinearLayout>
   <Button
         android:id="@+id/button1"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/back" 
         android:onClick="goBack"/>
        
        </LinearLayout>   
</LinearLayout>