<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonDistance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance" 
            android:onClick="distance" />

        <Button
            android:id="@+id/buttonTemperature"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature" 
            android:onClick="temperature" />

        <Button
            android:id="@+id/buttonWeight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:onClick="weight" />
        
    </LinearLayout>

</RelativeLayout>
