<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:fadingEdge="horizontal|vertical"
    android:orientation="horizontal"
    tools:context="${packageName}.${activityClass}" >

     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_background"
            android:orientation="horizontal">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="0dp"
                android:shadowColor="@color/title_background"
                android:text="@string/temperature">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_field"
            android:orientation="horizontal" >

            <EditText
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_margin="0dp"
                 android:focusable="false"
                android:text="@string/initial_value"
                android:textColor="@color/black_text" >
            </EditText>

            <EditText
                android:id="@+id/editInitialTemperature"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/input_field"
                android:inputType="numberDecimal" >

            </EditText>
        </LinearLayout>
            
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <EditText
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="0dp"
                android:ems="6"
                android:focusable="false"
                android:text="@string/from"
                android:background="@color/left_column"
                android:textColor="@color/black_text" >
            </EditText>
            <EditText
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="0dp"
                android:ems="6"
                android:focusable="false"
                android:text="@string/to"
                android:background="@color/right_column"
                android:textColor="@color/black_text" >
            </EditText>
        </LinearLayout>
        

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/radioGroupTemperatureFrom"
                android:layout_weight="1"
                android:layout_width="wrap_content"                
                android:layout_height="wrap_content"
                android:background="@color/left_column"
                android:baselineAligned="false"
                android:clipToPadding="false"
                android:fadingEdge="horizontal|vertical"
                android:padding="@dimen/RadioPadding" >

                <RadioButton
                    android:id="@+id/radioFromCelsius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius"
                    android:checked="true"
                    android:textColorHint="@color/black_text" />

                <RadioButton
                    android:id="@+id/radioFromFahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/farenheit" />

                <RadioButton
                    android:id="@+id/radioFromKelvin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupTemperatureTo"
                android:layout_weight="1"
                android:layout_width="wrap_content"                
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="@color/right_column"
                android:padding="@dimen/RadioPadding"
                android:showDividers="middle" >

                <RadioButton
                    android:id="@+id/radioToCelsius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/celsius" />

                <RadioButton
                    android:id="@+id/radioToFahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/farenheit" />

                <RadioButton
                    android:id="@+id/radioToKelvin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin" />
            </RadioGroup>

        </LinearLayout>
        <Button
       		android:id="@+id/button2"
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content"
       		android:onClick="calculateTemperature"
       		android:text="@string/calculate" />
        
            
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_field"
            android:orientation="horizontal" >

            <EditText
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_margin="0dp"
                android:ems="6"
                android:focusable="false"
                android:text="@string/resault"
                android:textColor="@color/black_text" >
            </EditText>

            <EditText
                android:id="@+id/textResultTemperature"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/input_field"
                android:inputType="numberDecimal" >
            </EditText>
        </LinearLayout>
   <Button
         android:id="@+id/button1"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/back" 
         android:onClick="goBack"/>

        
    </LinearLayout>
</LinearLayout>